force-app/main/default/objects/Model_Rate_Master__c/Model_Rate_Master__c.object-meta.xml
<CustomObject>
    <label>Model Rate Master</label>
    <nameField>
        <displayFormat>MRM-{0000}</displayFormat>
        <label>Model Rate Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Model Rate Masters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>