force-app/main/default/objects/Model_Rate_Master__c/fields/MRM_CREATEDDT__c.field-meta.xml
<CustomField>
    <fullName>MRM_CREATEDDT__c</fullName>
    <label>MRM_CREATEDDT</label>
    <type>DateTime</type>
</CustomField>