force-app/main/default/objects/Model_Rate_Master__c/fields/MRM_EFFDT__c.field-meta.xml
<CustomField>
    <fullName>MRM_EFFDT__c</fullName>
    <label>MRM_EFFDT</label>
    <type>Date</type>
</CustomField>