force-app/main/default/objects/Model_Rate_Master__c/fields/MRM_LASTUPDBY__c.field-meta.xml
<CustomField>
    <fullName>MRM_LASTUPDBY__c</fullName>
    <label>MRM_LASTUPDBY</label>
    <length>20</length>
    <type>Text</type>
</CustomField>