force-app/main/default/objects/Model_Rate_Master__c/fields/MRM_LASTUPDDT__c.field-meta.xml
<CustomField>
    <fullName>MRM_LASTUPDDT__c</fullName>
    <label>MRM_LASTUPDDT</label>
    <type>DateTime</type>
</CustomField>