force-app/main/default/objects/Model_Rate_Master__c/fields/MRM_MYM_FRNCD__c.field-meta.xml
<CustomField>
    <fullName>MRM_MYM_FRNCD__c</fullName>
    <label>MRM_MYM_FRNCD</label>
    <length>10</length>
    <type>Text</type>
</CustomField>