force-app/main/default/objects/Model_Rate_Master__c/fields/MRM_MYM_MODELCD__c.field-meta.xml
<CustomField>
    <fullName>MRM_MYM_MODELCD__c</fullName>
    <label>MRM_MYM_MODELCD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>