force-app/main/default/objects/Model_Rate_Master__c/fields/MRM_PRICE__c.field-meta.xml
<CustomField>
    <fullName>MRM_PRICE__c</fullName>
    <label>MRM_PRICE</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>